--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2426,6 +2426,10 @@ i:before {
   color: #fff;
 }
 
+.btn {
+  width:14%;
+}
+
 /* End Footer Area css
 ============================================================================================ */
 /*---------------------------------------------------- */
