--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@
                     <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                     <li class="nav-item"><a class="nav-link" href="comparison">Comparison</a></li>
                     <li class="nav-item"><a class="nav-link" href="apiendpoints">API Endpoints</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus">About Us</a></li>
                 </ul>
             </div>
         </nav>
@@ -119,7 +120,8 @@
                             data-fontsize="['72','72','72','50','50','30']" data-lineheight="['82','82','82','62','62','42']"
                             data-width="['none']" data-height="none" data-whitespace="nowrape" data-type="text"
                             data-responsive_offset="on" data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
-                            data-textAlign="['left','left','left','left','left','center']">Find out More <br>about Neural
+                            data-textAlign="['left','left','left','left','left','center']">Find out More <br>about
+                            Neural
                             Networks</div>
 
                         <div class="tp-caption tp-resizeme secand_text" data-x="['left','left','left','left','15','center']"
@@ -194,7 +196,18 @@
         </div>
     </section>
     <!--================End Slider Area =================-->
-
+    <!--================Introduction Area =================-->
+    <section>
+        <div class="container">
+            <div class="row">
+                <h1>Our Mission</h1>
+            </div>
+            <div class="row">
+                <p>Our mission statement.</p>
+            </div>
+        </div>
+    </section>
+    <!--================End Introduction Area =================-->
 
 
     <!--================Footer Area =================-->
@@ -234,7 +247,8 @@
             <div class="container">
                 <div class="float-sm-left">
                     <h5>
-                        <p>Copyright | All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
+                        <p>Copyright | All rights reserved | This template is made with <i class="fa fa-heart-o"
+                                aria-hidden="true"></i>
                             by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>
