--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -65,6 +65,7 @@
                     <li class="nav-item active"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                     <li class="nav-item"><a class="nav-link" href="comparison">Comparison</a></li>
                     <li class="nav-item"><a class="nav-link" href="apiendpoints">API Endpoints</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus">About Us</a></li>
                 </ul>
             </div>
         </nav>
@@ -89,8 +90,17 @@
 
     <!--================ DIS Chart Area =================-->
     <section class="DIS-result-charts">
+        <div class="container">
+            <br>
+            <h2>How Machine Learning Performs in Predicting Stock Prices: DIS</h2>
+        </div>
         <div id="DIS_results">
             <script src="{{url_for('static', filename='js/js_group/machine_learning.js')}}"></script>
+        </div>
+        <div class="container">
+            <div class="row">
+                <p>This graph compares the machine learning prediction results to the actual performance of stock prices over the last 4 years. It also notes some of the significant movie releases and events that may have caued large dips or rises in stock prices.</p>
+            </div>
         </div>
     </section>
     <!--================ End DIS Chart Area =================-->
@@ -256,7 +266,7 @@
 
     <!--================Footer Area =================-->
 
-    
+
     <footer class="footer_area">
         <div class="footer_widget_area">
             <div class="container">
@@ -292,7 +302,8 @@
             <div class="container">
                 <div class="float-sm-left">
                     <h5>
-                        <p>Copyright | All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
+                        <p>Copyright | All rights reserved | This template is made with <i class="fa fa-heart-o"
+                                aria-hidden="true"></i>
                             by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>
