--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -22,20 +22,21 @@
 
     <!-- Extra plugin css -->
     <link href="vendors/owl-carousel/owl.carousel.min.css" rel="stylesheet">
+    <link href="vendors/magnify-popup/magnific-popup.css" rel="stylesheet">
+
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
 
+    <!-- Graph JSScript
+    <script src="{{url_for('static', filename='js/js_group/aboutus.js')}}"></script> -->
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+
 </head>
 
 <body>
-
     <!--================Header Menu Area =================-->
     <header class="main_menu_area">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -50,11 +51,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="get-started">Get Started</a></li>
+                    <li class="nav-item"><a class="nav-link" href="get-started">Get Started</a></li>
                     <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                     <li class="nav-item"><a class="nav-link" href="comparison">Comparison</a></li>
                     <li class="nav-item"><a class="nav-link" href="apiendpoints">API Endpoints</a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus">About Us</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="aboutus">About Us</a></li>
                 </ul>
             </div>
         </nav>
@@ -65,88 +66,29 @@
     <section class="banner_area">
         <div class="container">
             <div class="banner_inner_text">
-                <h2>Get Started</h2>
-                <p>Methods For Stock Analysis</p>
+                <h2>About Us</h2>
             </div>
         </div>
     </section>
     <!--================End Banner Area =================-->
 
-    <!--================Testimonials Slider Area =================-->
-    <section class="testimonials_area">
-        <div class="container">
-            <div class="testimonials_slider owl-carousel">
-                <div class="item">
-                    <div class="testi_item">
-                        <h3>Fundamental Analysis</h3>
-                        <p>Using concrete information about a company's business to try to find the real value of a
-                            stock.</p>
-                        <div class="media">
-                            <div class="d-flex">
-                                <img class="rounded-circle" src="img/testimonials/testi-1.jpg" alt="">
-                            </div>
-                            <div class="media-body">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="testi_item">
-                        <h3>Technical Analysis</h3>
-                        <p>Utilizes various charts and statistical indicators to determine price support/resistance,
-                            range and trends.</p>
-                        <div class="media">
-                            <div class="d-flex">
-                                <img class="rounded-circle" src="img/testimonials/testi-2.jpg" alt="">
-                            </div>
-                            <div class="media-body">
 
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="testi_item">
-                        <h3>Sentiment Analysis</h3>
-                        <p>Stock market prediction on the basis of public sentiments expressed on Twitter/FB/Other
-                            Social Media. </p>
-                        <div class="media">
-                            <div class="d-flex">
-                                <img class="rounded-circle" src="img/testimonials/testi-3.jpg" alt="">
-                            </div>
-                            <div class="media-body">
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-
-    </section>
-    <!--================End Testimonials Slider Area =================-->
-
-    <!--================Google Title Area =================-->
-    <section>
-        <div class="container">
+    <!--================ Comparison Chart Area =================-->
+    <section class="graph_area_comparison">
+        <div class="containter">
             <div class="row">
-                <h1>Interest Over Time</h1>
+                <div class="col-lg-6" id="ideal-chart"></div>
+                <div class="col-lg-6" id="random-chart"></div>
             </div>
             <div class="row">
-                <p>This chart displays how interest in machine learning has increased over the last # years in comparison to other stock searches.</p>
+                <div class="col-lg-6" id="ml-chart"></div>
+                <div class="col-lg-6" id="snp500-chart"></div>
             </div>
         </div>
     </section>
-    <!--================End Google Title Area =================-->
+    <!--================End Comparison Chart Area =================-->
 
-    <!--================Google Trending Area =================-->
-    <section>
-        <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/1605_RC01/embed_loader.js"></script>
-        <script src="js/js_group/google_trends.js"></script>
-    </section>
-    <!--================End Google Trending Area =================-->
+
 
 
     <!--================Footer Area =================-->
@@ -225,7 +167,12 @@
     <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
     <script src="vendors/magnify-popup/jquery.magnific-popup.min.js"></script>
     <script src="js/smoothscroll.js"></script>
+    <script src="vendors/circle-bar/circle-progress.min.js"></script>
+    <script src="vendors/circle-bar/plugins.js"></script>
+    <script src="vendors/isotope/imagesloaded.pkgd.min.js"></script>
+    <script src="vendors/isotope/isotope.pkgd.min.js"></script>
 
+    <script src="js/circle-active.js"></script>
     <script src="js/theme.js"></script>
 </body>
 
