--- a/templates/apiendpoints.html
+++ b/templates/apiendpoints.html
@@ -53,6 +53,7 @@
                     <li class="nav-item"><a class="nav-link" href="machinelearning">Machine Learning</a></li>
                     <li class="nav-item"><a class="nav-link" href="comparison">Comparison</a></li>
                     <li class="nav-item active"><a class="nav-link" href="apiendpoints">API Endpoints</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus">About Us</a></li>
                 </ul>
             </div>
         </nav>
