added button js

--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -102,11 +102,15 @@
     <section class="buttons">
         <div class="container">
             <button type="button" class="btn btn-secondary" aria-pressed="true" id="DIS">Disney</button>
+            <script src="{{url_for('static', filename='js/js_group/dis_button.js')}}"></script>
             <button type="button" class="btn btn-secondary" aria-pressed="true" id="CMG">Chipotle</button>
+            <script src="{{url_for('static', filename='js/js_group/cmg_button.js')}}"></script>
             <button type="button" class="btn btn-secondary" aria-pressed="true" id="APPL">Apple</button>
+            <script src="{{url_for('static', filename='js/js_group/aapl_button.js')}}"></script>
             <button type="button" class="btn btn-secondary" aria-pressed="true" id="CVS">CVS</button>
+            <script src="{{url_for('static', filename='js/js_group/cvs_button.js')}}"></script>
             <button type="button" class="btn btn-secondary" aria-pressed="true" id="XOM">Exon Mobile</button>
-            <script src="{{url_for('static', filename='js/js_group/five_stock_button.js')}}"></script>
+            <script src="{{url_for('static', filename='js/js_group/xom_button.js')}}"></script>
         </div>
     </section>
     <!--================ End Button Area =================-->
