updated ml page

--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -207,8 +207,9 @@
                         <p>Epoch:</p>
                         <select name="location" class="app-select form-control" id="epoch_dropdown" required>
                             <option data-display="Choose locations">Epoch</option>
-                            <option value="10">10</option>
+                            <option value="25">25</option>
                             <option value="50">50</option>
+                            <option value="75">75</option>
                             <option value="100">100</option>
                         </select>
                         <br>
@@ -234,6 +235,8 @@
                             <option value="AAPL">APPL</option>
                             <option value="CMG">CMG</option>
                             <option value="DIS">DIS</option>
+                            <option value="CVS">CVS</option>
+                            <option value="XOM">XOM</option>
                         </select>
                         <br>
                     </div>
