about us partially

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -72,6 +72,86 @@
     </section>
     <!--================End Banner Area =================-->
 
+    <!--================ Profile Area =================-->
+    <section class="Profile">
+        <div class="container">
+            <div class="row" id="JeffYamada">
+                <div class="col-sm-6 col-md-6 col-xs-6">
+                    <div class="thumbnail" style="border:none; background:white;">
+                        <div class="col-sm-6 col-md-6 col-xs-12 image-container">
+                            <img src="../img/Profiles/jeff.jpg" style="height:200px; margin-left:-15px;" />
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-xs-12">
+                        <h3>Bio</h3>
+                        <p style="font-size:10px; color:#03225C;">
+                            I'm a city dweller who loves to travel, play ping pong, and find dessert adventures
+                            along the way. You can find me at the intersection of nerdy and lovable. I have
+                            experience ranging from logistics Start-Ups to corporate finance. I have found that
+                            nothing satisfies me more than developing new relationships, solving problems, and
+                            creating effective vizualizations for growing the business.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="MaryLin">
+                <div class="col-sm-6 col-md-6 col-xs-6">
+                    <div class="thumbnail" style="border:none; background:white;">
+                        <div class="col-sm-6 col-md-6 col-xs-12 image-container">
+                            <img src="../img/Profiles/mary.png" style="height:200px; margin-left:-15px;" />
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-xs-12">
+
+                        <h3>Bio</h3>
+                        <p style="font-size:10px; color:#03225C;">
+                        </p>
+                    </div>
+                </div>
+                <div class="row" id="ShangWang">
+                    <div class="thumbnail" style="border:none; background:white;">
+                        <div class="col-sm-6 col-md-6 col-xs-12 image-container">
+                            <img src="../img/Profiles/shang.jpg" style="height:200px; margin-left:-15px;" />
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-xs-12">
+                        <h3>Bio</h3>
+                        <p style="font-size:10px; color:#03225C;">
+                        </p>
+                    </div>
+                </div>
+                <div class="row" id="JackieDong">
+                    <div class="thumbnail" style="border:none; background:white;">
+                        <div class="col-sm-6 col-md-6 col-xs-12 image-container">
+                            <img src="../img/Profiles/jackie.jpg" style="height:200px; margin-left:-15px;" />
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-xs-12">
+                        <h3>Bio</h3>
+                        <p style="font-size:10px; color:#03225C;">
+                            Hey my name is Jackie Dong and I am a sophomore from University of Southern California,
+                            studying Applied Math and Computer Science. I am interested in how big data transforms
+                            the decision making process in various industries such as transportation, medical
+                            research, and business.</p>
+                    </div>
+                </div>
+                <div class="row" id="HaroldYoung">
+                    <div class="thumbnail" style="border:none; background:white;">
+                        <div class="col-sm-6 col-md-6 col-xs-12 image-container">
+                            <img src="../img/Profiles/harold.png" style="height:200px; margin-left:-15px;" />
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-xs-12">
+                        <h3>Bio</h3>
+                        <p style="font-size:10px; color:#03225C;">
+                            I graduated with a degree in economics from University of Wisconsin - Madison and a
+                            certificate from University of Southern California’s Data Analytics bootcamp. I enjoy
+                            learning about machine learning, trading stocks and look forward to how I can
+                            incorporate both in the future.</p>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!--================ End Profile Area =================-->
 
     <!--================ Comparison Chart Area =================-->
     <section class="graph_area_comparison">
@@ -92,7 +172,7 @@
 
 
     <!--================Footer Area =================-->
-    
+
     <footer class="footer_area">
         <div class="footer_widget_area">
             <div class="container">
@@ -128,7 +208,8 @@
             <div class="container">
                 <div class="float-sm-left">
                     <h5>
-                        <p>Copyright | All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i>
+                        <p>Copyright | All rights reserved | This template is made with <i class="fa fa-heart-o"
+                                aria-hidden="true"></i>
                             by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;<script>
