--- a/templates/index.html
+++ b/templates/index.html
@@ -203,7 +203,7 @@
                 <h1>Our Mission</h1>
             </div>
             <div class="row">
-                <p>Our mission statement.</p>
+                <p>The purpose for this project was to help those that want to get into trading, but don’t know how to start.  The barrier to entry for trading can seem daunting when viewing all the different types of analysis such as fundamental, technical and sentiment as well as trying to understand finance.  To help those with this problem, we provide a machine learning algorithm that analyzes every stock price from every stock in the Standard and Poor’s 500 from 2000 to 2018 to predict the next day’s return of the selected stock.</p>
             </div>
         </div>
     </section>
