--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -99,7 +99,9 @@
         </div>
         <div class="container">
             <div class="row">
-                <p>This graph compares the machine learning prediction results to the actual performance of stock prices over the last 4 years. It also notes some of the significant movie releases and events that may have caued large dips or rises in stock prices.</p>
+                <p>This graph compares the machine learning prediction results to the actual performance of stock
+                    prices over the last 4 years. It also notes some of the significant movie releases and events that
+                    may have caued large dips or rises in stock prices.</p>
             </div>
         </div>
     </section>
@@ -109,70 +111,49 @@
 
     <!--================The Machine Learning Area =================-->
     <section class="best_3d_area">
-        <div class="left_3d">
-            <div class="shap_slider_inner owl-carousel">
-                <div class="item">
-                    <h2>What is a Hidden Layer?</h2>
-                    <p>A hidden layer in an artificial neural network is a layer in between input layers and output
-                        layers, where artificial neurons take in a set of weighted inputs and produce an output through
-                        an activation function.</p>
-                    <div class="media">
-                        <div class="media-body">
-                            <h5></h5>
-                            <h6>https://www.techopedia.com/definition/33264/hidden-layer-neural-networks</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <h2>What are Epochs?</h2>
-                    <p>One Epoch is when an entire dataset is passed forward and backward through the neural network
-                        only once</p>
-                    <div class="media">
-                        <div class="media-body">
-                            <h5># Epochs used: 1000</h5>
-                            <h6>https://towardsdatascience.com/epoch-vs-iterations-vs-batch-size-4dfb9c7ce9c9</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <h2>What is the Learning Rate?</h2>
-                    <p>Learning rate is a hyper-parameter that controls how much we are adjusting the weights of our
-                        network with respect the loss gradient. The lower the value, the slower we travel along the
-                        downward slope. While this might be a good idea (using a low learning rate) in terms of making
-                        sure that we do not miss any local minima, it could also mean that we'll be taking a long time
-                        to converge — especially if we get stuck on a plateau region.</p>
-                    <div class="media">
-                        <div class="media-body">
-                            <h5>Our Learning Rate: between .001 and .003</h5>
-                            <h6>https://towardsdatascience.com/understanding-learning-rates-and-how-it-improves-performance-in-deep-learning-d0d4059c1c10</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <h2>What is a neuron?</h2>
-                    <p>A "neuron" in an artificial neural network is a mathematical approximation of a biological
-                        neuron. It takes a vector of inputs, performs a transformation on them, and outputs a single
-                        scalar value. It can be thought of as a filter. Typically we use nonlinear filters in neural
-                        networks.</p>
-                    <div class="media">
-                        <div class="media-body">
-                            <h5># of Neurons used: between 32 and 256</h5>
-                            <h6>https://www.quora.com/What-are-neurons-in-machine-learning</h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="right_text">
+        <div class="container">
             <div class="right_text_inner">
                 <div class="text_3d">
                     <div class="l_title">
                         <img src="img/icon/title-icon.png" alt="">
                         <h6>Our Algorithm</h6>
-                        <h2>Adjusted Closing Price</h2>
+                        <h6>Adjusted Closing Price</h6>
                     </div>
-                    <p>Our Neural Network takes into account the S&P 500 Index, trains based on a 75:25, and returns a
-                        prediction based on the next day.</p>
+                    <p>Hello all and welcome to Stock Epoch-Alypse. As someone that is new to machine learning and a
+                        co-creator of this website, I feel that I should share my journey as well as what the Stock
+                        Epoch-Alypse team and I hope to provide the users of this website. I have been infatuated with
+                        stocks and started out trading since I was 18. Like most traders that I have talked to,
+                        listened to, or read about, my start in the trading game was rocky. I always wanted to be a
+                        hedge fund trader or manager, but I didn’t know the path to get into that industry, so I
+                        figured I would get a degree in Economics to help remedy that issue. Unfortunately, it did not
+                        yield the results that I was looking for but the lack of feedback and or job opportunities
+                        taught me one thing, that I need to become more knowledgeable about trading and the systems in
+                        which companies utilize to trade, so I took to learning python. I found a coding bootcamp
+                        called the University of Southern California Data Analytics which taught python, a slew of data
+                        visualization’s and machine learning. After reading the former and latter I was sold. Our final
+                        project, which is what you are currently viewing opened my eyes to my new-found love of machine
+                        learning. It was a huge undertaking as there are so many facets to a machine learning
+                        algorithm, but it was so fun! Learning about epochs, learning rates, batch sizing, layering,
+                        weights, neurons, train/test split ratios etc. was daunting but every new piece of information
+                        I found, I was more hooked on trying to see how it affects the output of a machine learning
+                        program, which is why I continue to learn about it every day and I will continue to share my
+                        thoughts, knowledge and bits of information that I think may be useful to those that want to
+                        learn about trading or machine learning. </p>
+                    <p>The Stock Epoch-Alypse team is here to give you an understanding of what the different types of
+                        a analysis’s are and how machine learning can be utilized to support trading decisions based on
+                        the Standard and Poor’s stocks between 2000 and 2018. We want to give you the best experience
+                        that we can. As those that are also passionate about machine learning, we want to make sure
+                        that our users have all the information that they could ever need to be a better trader. As of
+                        this instance we are trying to implement having our algorithm run on website so that users can
+                        do machine learning on there own without having to delve too deep into the inner workings of
+                        machine learning. Later, we plan to have the user run the algorithm, manipulate more facets of
+                        the algorithm, such as batch sizing, neurons, hidden layers amongst other things. Please let us
+                        know if there are things that you would like to see implemented into our website as we want to
+                        provide you all with the best experience possible. Thank you for reading this post and I hope
+                        that you enjoy your stay at Stock Epoch-Alypse.</p>
+                    <p>Until next time,</p>
+                    <p>Harold Young</p>
+
                 </div>
                 <div class="shap_mobile">
                     <img src="img/machinelearning.png" alt="">
