--- a/templates/comparison.html
+++ b/templates/comparison.html
@@ -105,7 +105,7 @@
             <script src="{{url_for('static', filename='js/js_group/dis_button.js')}}"></script>
             <button type="button" class="btn btn-secondary" aria-pressed="true" id="CMG">Chipotle</button>
             <script src="{{url_for('static', filename='js/js_group/cmg_button.js')}}"></script>
-            <button type="button" class="btn btn-secondary" aria-pressed="true" id="APPL">Apple</button>
+            <button type="button" class="btn btn-secondary" aria-pressed="true" id="APL">Apple</button>
             <script src="{{url_for('static', filename='js/js_group/aapl_button.js')}}"></script>
             <button type="button" class="btn btn-secondary" aria-pressed="true" id="CVS">CVS</button>
             <script src="{{url_for('static', filename='js/js_group/cvs_button.js')}}"></script>
